--- a/flightros/dependencies.yaml
+++ b/flightros/dependencies.yaml
@@ -1,29 +1,29 @@
 repositories:
   catkin_simple:
     type: git
-    url: git@github.com:catkin/catkin_simple.git
-    version: master
+    url: https://github.com/catkin/catkin_simple.git
+    version: 0.1.1
   eigen_catkin:
     type: git
-    url: git@github.com:ethz-asl/eigen_catkin.git
+    url: https://github.com/ethz-asl/eigen_catkin.git
     version: master
   mav_comm:
     type: git
-    url: git@github.com:ethz-asl/mav_comm.git
+    url: https://github.com/ethz-asl/mav_comm.git
     version: master
   rotors_simulator:
     type: git
-    url: git@github.com:ethz-asl/rotors_simulator.git
+    url: https://github.com/ethz-asl/rotors_simulator.git
     version: master
   rpg_quadrotor_common:
     type: git
-    url: git@github.com:uzh-rpg/rpg_quadrotor_common.git
+    url: https://github.com/uzh-rpg/rpg_quadrotor_common.git
     version: master
   rpg_single_board_io:
     type: git
-    url: git@github.com:uzh-rpg/rpg_single_board_io.git
+    url: https://github.com/uzh-rpg/rpg_single_board_io.git
     version: master
   rpg_quadrotor_control:
     type: git
-    url: git@github.com:uzh-rpg/rpg_quadrotor_control.git
+    url: https://github.com/uzh-rpg/rpg_quadrotor_control.git
     version: master
